--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
+/* Fonts */
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 300;
+  src: url('../fonts/poppins-v24-latin-300.woff2') format('woff2'),
+    url('../fonts/poppins-v24-latin-300.ttf') format('truetype');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 400;
+  src: url('../fonts/poppins-v24-latin-regular.woff2') format('woff2'),
+    url('../fonts/poppins-v24-latin-regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 600;
+  src: url('../fonts/poppins-v24-latin-600.woff2') format('woff2'),
+    url('../fonts/poppins-v24-latin-600.ttf') format('truetype');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 900;
+  src: url('../fonts/poppins-v24-latin-900.woff2') format('woff2'),
+    url('../fonts/poppins-v24-latin-900.ttf') format('truetype');
+}
+
 /* Base */
 
 :root {
@@ -9,6 +43,15 @@
 
 body {
   color: var(--color-primay-dark);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5;
+  /* Кофициєнт 27 / 18 = 1.5 */
+}
+
+address {
+  font-style: normal;
 }
 
 ul {
@@ -18,6 +61,7 @@ ul {
 /* Button */
 .btn-primary {
   color: var(--color-primay-light);
+  font-weight: 600;
   border: 2px solid var(--color-brand-light);
   background-color: var(--color-brand-light);
   border-radius: 8px;
@@ -37,16 +81,21 @@ ul {
 
 .nav-links:hover {
   color: var(--color-brand-light);
+  font-weight: 600;
 }
 
 /* Hero section */
 .hero-title {
   color: var(--color-primay-light);
   text-align: center;
+  font-weight: 900;
+  font-size: 128px;
+  /* font-style: italic; */
+  /* text-decoration: none; */
+  /* white-space: nowrap; */
   /* text-shadow: 2px 2px 4px #000; */
   /* letter-spacing: 4px; */
   /* word-spacing: 15px; */
-  /* white-space: nowrap; */
 }
 
 .hero-title .accent {
@@ -60,6 +109,17 @@ ul {
   background-color: var(--color-brand-light);
 }
 
+.advantages-item {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.section-title {
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 1.3;
+}
+
 .section-title .accent {
   color: var(--color-brand-dark);
 }
@@ -67,9 +127,45 @@ ul {
 /* Traditions section */
 .traditions-text .brand {
   color: var(--color-brand-light);
-
+  font-weight: 600;
 }
 
 .traditions-text .uppercase {
   text-transform: uppercase;
+}
+
+/* Chef section */
+
+.chef-title {
+  font-size: 40px;
+  font-weight: 600;
+}
+
+/* Format section */
+
+.format-title {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.format-text {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+/* Footer */
+
+.address-link {
+  color: var(--color-primay-light);
+  font-size: 16px;
+  font-weight: 300;
+  text-decoration: none;
+}
+
+.address-link:hover {
+  color: var(--color-brand-light);
+}
+
+.address-copyright {
+  font-size: 14px;
 }
