--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@ address {
 }
 
 ul {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -83,6 +85,34 @@ ul {
   margin: 0 auto;
   padding: 0 24px;
 }
+
+/* Header */
+
+.header {
+  background-color: lightgray;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  gap: 40px;
+}
+
+.header-menu {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+  gap: 64px;
+}
+
+.header-item {}
 
 /* Button */
 .btn-primary {
@@ -108,7 +138,6 @@ ul {
 
 .nav-links:hover {
   color: var(--color-brand-light);
-  font-weight: 600;
 }
 
 /* Hero section */
@@ -145,12 +174,19 @@ ul {
 }
 
 /* Advantages section */
-.advantages-ul {
-  color: var(--color-primay-light);
+.advantages-section {
   background-color: var(--color-brand-light);
+  padding: 16px 0;
+}
+
+.advantages-ul {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
 }
 
 .advantages-item {
+  color: var(--color-primay-light);
   font-size: 20px;
   font-weight: 300;
 }
@@ -166,6 +202,16 @@ ul {
 }
 
 /* Traditions section */
+.traditions-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.traditions-content {
+  max-width: 710px;
+}
+
 .traditions-section {
   padding-top: 96px;
 }
@@ -183,6 +229,10 @@ ul {
   text-transform: uppercase;
 }
 
+.traditions-text.limited {
+  max-width: 340px;
+}
+
 /* Chef section */
 .chefs-title {
   margin-bottom: 80px;
@@ -195,6 +245,22 @@ ul {
 }
 
 /* Format section */
+.formats-list {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.formats-item {
+  flex-basis: calc((100% - 40px) / 3);
+}
+
+.format-card {
+  border: 1px solid lightgray;
+  border-radius: 16px;
+  padding: 24px;
+}
+
 .formats-title {
   margin-bottom: 80px;
 }
