--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ ul {
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
 }
 
 .hero-title {
