--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,15 @@
 :root {
   --color-primay-dark: #31261A;
   --color-primay-light: #FAF4EA;
-  --color-brand-light: #819B57;
+  --color-brand-light: #cfcfbc;
   --color-brand-dark: #465929;
+  --color-brand-normal: #819B57;
+  --color-secondary-dark: #a28268;
 }
 
 body {
   color: var(--color-primay-dark);
+  background-color: var(--color-primay-light);
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -118,8 +121,8 @@ ul {
 .btn-primary {
   color: var(--color-primay-light);
   font-weight: 600;
-  border: 2px solid var(--color-brand-light);
-  background-color: var(--color-brand-light);
+  border: 2px solid var(--color-brand-normal);
+  background-color: var(--color-brand-normal);
   border-radius: 8px;
   cursor: pointer;
   padding: 16px 32px;
@@ -137,14 +140,14 @@ ul {
 }
 
 .nav-links:hover {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
 }
 
 /* Hero section */
 .hero-section {
   padding: 272px 0;
   /* background: url(../img/coupe-in-bekery.jpg) no-repeat center top / cover fixed; */
-  background-image: url(../img/coupe-in-bekery.jpg);
+  background-image: url(../img/hero-section-background.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -166,7 +169,7 @@ ul {
 }
 
 .hero-title .accent {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
   font-family: "Poppins", sans-serif;
 }
 
@@ -181,7 +184,7 @@ ul {
 
 /* Advantages section */
 .advantages-section {
-  background-color: var(--color-brand-light);
+  background-color: var(--color-brand-normal);
   padding: 16px 0;
 }
 
@@ -201,6 +204,10 @@ ul {
   font-size: 64px;
   font-weight: 900;
   line-height: 1.3;
+}
+
+.section-title.centered {
+  text-align: center;
 }
 
 .section-title .accent {
@@ -227,7 +234,7 @@ ul {
 }
 
 .traditions-text .brand {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
   font-weight: 600;
 }
 
@@ -239,9 +246,30 @@ ul {
   max-width: 340px;
 }
 
+.traditions-image {
+  border-radius: 400px 400px 0 0;
+}
+
 /* Chef section */
 .chefs-title {
-  margin-bottom: 80px;
+  max-width: 540px;
+  margin: 0 auto 80px;
+}
+
+.chefs-title::before,
+.chefs-title::after {
+  display: block;
+  content: '';
+  width: 352px;
+  border: 2px solid #cfcfbc;
+  /* height: 2px;
+  background-color: #cfcfbc; */
+}
+
+.chef-images {
+  border-radius: 4px 4px 4px 200px;
+  box-shadow: -16px 16px 0 0 var(--color-primay-light),
+    -16px 16px 0 2px var(--color-secondary-dark);
 }
 
 .chef-title {
@@ -262,6 +290,8 @@ ul {
 }
 
 .format-card {
+  height: 444px;
+  background-image: linear-gradient(180deg, rgba(49, 38, 26, 0%) 55%, rgba(49, 38, 26, 71%) 73%, #31261A 100%);
   border: 1px solid lightgray;
   border-radius: 16px;
   padding: 24px;
@@ -296,9 +326,17 @@ ul {
 }
 
 .address-link:hover {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
 }
 
 .address-copyright {
   font-size: 14px;
+}
+
+.footer {
+  background-color: var(--color-primay-dark);
+  background-image: url(../img/footer-background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
